--- a/index.html
+++ b/index.html
@@ -179,9 +179,9 @@
         <div class="text">
           <h1>Alakunta Vasu</h1>
           <p>Email: <a href="mailto:aalakuntavasu@gmail.com">aalakuntavasu@gmail.com</a></p>
-          <p>Phone: <a href="tel:+917993108296">+91 9346056416</a></p>
+          <p>Phone: <a href="tel:+919346056416">+91 9346056416</a></p>
           <a href="https://www.linkedin.com/in/alakuntavasu">LinkedIn</a>
-          <a href="https://github.com/jitheshguptha">GitHub</a>
+          <a href="https://github.com/vasuaalakunta18">GitHub</a>
         </div>
       </div>
     </section>
@@ -191,7 +191,7 @@
       <div class="text">
         <p>Thank you for visiting my portfolio! Let’s connect on
           <a href="https://www.linkedin.com/in/alakuntavasu">LinkedIn</a> and
-          <a href="https://github.com/jitheshguptha">GitHub</a>.
+          <a href="https://github.com/vasuaalakunta18">GitHub</a>.
         </p>
       </div>
     </footer>
